Making messagesize configuratble.